# FinDrum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
benchmarks/: benchmark.ipynb
clients/: client.py  local_client.py  minio_client.py
crawlers/: crawler.py  sec_crawler.py
findrum/: __init__.py
processors/: processor.py  sec_processor.py
readers/: reader.py
store/: store.py
tests/: test_sec_crawler.py
writers/: parquet_writer.py  writer.py
