[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FinDrum"
version = "1.0.0"
description = "A Python package to retrieve financial data from official sources."
authors = [{ name = "Óscar Rico Rodríguez" }]
requires-python = ">=3.12"
dependencies = [
    "pandas ~= 2.2.3",
    "requests ~= 2.32.3",
    "yfinance ~= 0.2.57",
    "pyaml ~= 25.1.0",
    "minio ~= 7.2.15",
    "pyarrow ~= 20.0.0"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "*.ipynb", ".venv*", "dist*", ".pytest_cache*"]